# devden-stat-bot

./: README.md  devden-stat-bot.cabal  hie.yaml  justfile
.github/workflows/: update-flake-lock.yaml
app/: Main.hs
nix/modules/flake/: devshell.nix  haskell.nix
src/: Main.hs  Model.hs
src/Db/: Snowflake.hs
