cabal-version:      2.4
name:               devden-stat-bot
version:            0.1.0.0
license:            MIT
copyright:          2025 Alexander Wood
author:             Alexander Wood
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base           >=4   && <5
    , beam-core
    , beam-migrate
    , beam-postgres
    , beam-sqlite
    , calamity
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude         >=1.0
    , shower
    , sqlite-simple
    , time

  default-language:   GHC2021

library
  import:          shared
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Db.Snowflake
    Model

executable devden-stat-bot
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  devden-stat-bot
